[gd_scene load_steps=6 format=3 uid="uid://cyd2jfnwe8u1i"]

[ext_resource type="Script" uid="uid://clyew4rbbuk4j" path="res://UserInterface/victory_layer.gd" id="1_jsdw8"]
[ext_resource type="FontFile" uid="uid://dniu5a4x6mb0h" path="res://assets/fonts/Asap/static/Asap-Bold.ttf" id="2_ilmn6"]
[ext_resource type="Texture2D" uid="uid://dqjwx0g80wd7i" path="res://assets/images/star.png" id="2_wyne5"]

[sub_resource type="Theme" id="Theme_m5u3k"]
default_font = ExtResource("2_ilmn6")

[sub_resource type="LabelSettings" id="LabelSettings_45iik"]
font_size = 96

[node name="VictoryLayer" type="CanvasLayer"]
visible = false
script = ExtResource("1_jsdw8")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_m5u3k")

[node name="Panel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Victory!"
label_settings = SubResource("LabelSettings_45iik")
horizontal_alignment = 1

[node name="StarsHBoxContainer" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2

[node name="Star1" type="TextureRect" parent="CenterContainer/Panel/VBoxContainer/StarsHBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(110, 110)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_wyne5")
expand_mode = 2
stretch_mode = 5

[node name="Star2" type="TextureRect" parent="CenterContainer/Panel/VBoxContainer/StarsHBoxContainer"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(110, 110)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_wyne5")
expand_mode = 2
stretch_mode = 5

[node name="Star3" type="TextureRect" parent="CenterContainer/Panel/VBoxContainer/StarsHBoxContainer"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(110, 110)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_wyne5")
expand_mode = 2
stretch_mode = 5

[node name="SurvivedLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Suvived + 1"
horizontal_alignment = 1

[node name="HealthLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
visible = false
layout_mode = 2
text = "Full Health + 1"
horizontal_alignment = 1

[node name="MoneyLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
visible = false
layout_mode = 2
text = "Extra Money  + 1"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="RetryButton" type="Button" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Retry"

[node name="QuitButton" type="Button" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Quit"

[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/HBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
